[package]
name = "chalk-derive"
version = "0.23.0"
description = "A helper crate for use by chalk crates for `derive` macros."
license = "Apache-2.0/MIT"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
readme = "README.md"
keywords = ["compiler", "traits", "prolog"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
synstructure = "0.12"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
