[package]
name = "chalk-engine-base"
version = "0.10.1-dev"
description = "Base types for Chalk logic engines"
license = "Apache-2.0/MIT"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
readme = "README.md"
keywords = ["compiler", "traits", "prolog"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
