[package]
name = "chalk-engine"
version = "0.10.1-dev"
description = "Core trait engine from Chalk project"
license = "Apache-2.0/MIT"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
readme = "README.md"
keywords = ["compiler", "traits", "prolog"]
edition = "2018"

[features]
default = []

[dependencies]
rustc-hash = { version = "1.1.0" }

chalk-engine-base = { version = "0.10.1-dev", path = "../chalk-engine-base" }
