[package]
name = "chalk-engine"
version = "0.13.0"
description = "Core trait engine from Chalk project"
license = "Apache-2.0/MIT"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
readme = "README.md"
keywords = ["compiler", "traits", "prolog"]
edition = "2018"

[features]
default = []

[dependencies]
rustc-hash = { version = "1.1.0" }

chalk-derive = { version = "=0.13.0", path = "../chalk-derive" }
chalk-ir = { version = "=0.13.0", path = "../chalk-ir" }
