[package]
name = "chalk-engine"
version = "0.105.0-dev.0"
description = "Core trait engine from Chalk project"
license = "MIT OR Apache-2.0"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
readme = "README.md"
keywords = ["compiler", "traits", "prolog"]
edition = "2018"

[features]
default = []

[dependencies]
rustc-hash = { version = "1.1.0" }
tracing = "0.1"

chalk-derive = { version = "0.105.0-dev.0", path = "../chalk-derive" }
chalk-ir = { version = "0.105.0-dev.0", path = "../chalk-ir" }
chalk-solve = { version = "0.105.0-dev.0", path = "../chalk-solve" }

[dev-dependencies]
chalk-integration = { path = "../chalk-integration" }
