[package]
name = "chalk-integration"
version = "0.10.1-dev"
license = "Apache-2.0/MIT"
description = "Sample solver setup for Chalk"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
keywords = ["compiler", "traits", "prolog"]
edition = "2018"
publish = false

[dependencies]
lalrpop-intern = "0.15.1"
salsa = "0.10.0"

chalk-macros = { version = "0.10.1-dev", path = "../chalk-macros" }
chalk-derive = { version = "0.10.1-dev", path = "../chalk-derive" }
chalk-engine = { version = "0.10.1-dev", path = "../chalk-engine" }
chalk-ir = { version = "0.10.1-dev", path = "../chalk-ir", features = ["default-interner"] }
chalk-rust-ir = { version = "0.10.1-dev", path = "../chalk-rust-ir" }
chalk-solve = { version = "0.10.1-dev", path = "../chalk-solve" }
chalk-parse = { version = "0.10.1-dev", path = "../chalk-parse" }
