[package]
name = "chalk-integration"
version = "0.11.0"
license = "Apache-2.0/MIT"
description = "Sample solver setup for Chalk"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
keywords = ["compiler", "traits", "prolog"]
edition = "2018"
publish = false

[dependencies]
string_cache = "0.8.0"
salsa = "0.10.0"

chalk-derive = { version = "=0.11.0", path = "../chalk-derive" }
chalk-engine = { version = "=0.11.0", path = "../chalk-engine" }
chalk-ir = { version = "=0.11.0", path = "../chalk-ir" }
chalk-solve = { version = "=0.11.0", path = "../chalk-solve" }
chalk-parse = { version = "=0.11.0", path = "../chalk-parse" }
