[package]
name = "chalk-ir"
version = "0.58.0-dev.0"
description = "Chalk's internal representation of types, goals, and clauses"
license = "Apache-2.0/MIT"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
readme = "README.md"
keywords = ["compiler", "traits", "prolog"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
bitflags = "1.2.1"
chalk-derive = { version = "0.58.0-dev.0", path = "../chalk-derive" }
