[package]
name = "chalk-macros"
version = "0.1.0"
description = "Macros for Chalk"
license = "Apache-2.0/MIT"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang-nursery/chalk"
readme = "README.md"
keywords = ["compiler", "traits", "prolog"]

[dependencies]
lazy_static = "1.1.0"
