[package]
name = "chalk-parse"
version = "0.33.0"
description = "Parser for the Chalk project"
license = "Apache-2.0/MIT"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
readme = "README.md"
keywords = ["compiler", "traits", "prolog"]
build = "build.rs" # LALRPOP preprocessing
edition = "2018"
publish = false

[build-dependencies.lalrpop]
version = "0.19"
features = ["lexer"]

[dependencies]
lalrpop-util = "0.19"
regex = "1.3"
string_cache = "0.8.0"
