[package]
name = "chalk-parse"
version = "0.86.0"
description = "Parser for the Chalk project"
license = "MIT OR Apache-2.0"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
readme = "README.md"
keywords = ["compiler", "traits", "prolog"]
build = "build.rs" # LALRPOP preprocessing
edition = "2018"
publish = false

[build-dependencies.lalrpop]
version = "0.19"
features = ["lexer"]

[dependencies]
lalrpop-util = "0.19"
regex = "1.5"
string_cache = "0.8.0"
