[package]
name = "chalk-recursive"
version = "0.105.0-dev.0"
description = "Recursive solver for the Chalk project"
license = "MIT OR Apache-2.0"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
readme = "README.md"
keywords = ["compiler", "traits", "prolog"]
edition = "2018"

[dependencies]
rustc-hash = { version = "1.1.0" }
tracing = "0.1"

chalk-derive = { version = "0.105.0-dev.0", path = "../chalk-derive" }
chalk-ir = { version = "0.105.0-dev.0", path = "../chalk-ir" }
chalk-solve = { version = "0.105.0-dev.0", path = "../chalk-solve", default-features = false }

[dev-dependencies]
chalk-integration = { path = "../chalk-integration" }

[features]
default = ["tracing-full"]

tracing-full = ["chalk-solve/tracing-full"]
