[package]
name = "chalk-repl"
version = "0.1.0"
license = "Apache-2.0/MIT"
description = "Chalki - the Chalk repl"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
keywords = ["compiler", "traits", "prolog"]
edition = "2018"

[[bin]]
name = "chalki"
path = "src/main.rs"

[dependencies]
docopt = "1.0.0"
failure = "0.1"
rustyline = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.chalk-integration]
version = "0.1.0"
path = "../chalk-integration"

[dependencies.chalk-solve]
version = "0.1.0"
path = ".."

[dependencies.chalk-parse]
version = "0.1.0"
path = "../chalk-parse"
