[package]
name = "chalk-rust-ir"
version = "0.1.0"
license = "Apache-2.0/MIT"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
edition = "2018"

[dependencies.chalk-ir]
version = "0.1.0"
path = "../chalk-ir"

[dependencies.chalk-macros]
version = "0.1.0"
path = "../chalk-macros"

[dependencies.chalk-engine]
version = "0.9.0"
path = "../chalk-engine"

[dependencies.chalk-derive]
version = "0.1.0"
path = "../chalk-derive"
