[package]
name = "chalk-rust-ir"
version = "0.10.1-dev"
description = "A library that defines the IR for Rust concepts like traits and impls."
license = "Apache-2.0/MIT"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
edition = "2018"

[dependencies]
chalk-macros = { version = "0.10.1-dev", path = "../chalk-macros" }
chalk-derive = { version = "0.10.1-dev", path = "../chalk-derive" }
chalk-engine = { version = "0.10.1-dev", path = "../chalk-engine" }
chalk-ir = { version = "0.10.1-dev", path = "../chalk-ir" }
