[package]
name = "chalk-solve"
version = "0.15.0"
description = "Combines the chalk-engine with chalk-ir"
license = "Apache-2.0/MIT"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
readme = "README.md"
keywords = ["compiler", "traits", "prolog"]
edition = "2018"

[dependencies]
ena = "0.14.0"
itertools = "0.9.0"
petgraph = "0.5.0"
tracing = "0.1"
tracing-subscriber = "0.2"
rustc-hash = { version = "1.0.0" }

chalk-derive = { version = "=0.15.0", path = "../chalk-derive" }
chalk-engine = { version = "=0.15.0", path = "../chalk-engine", optional = true }
chalk-ir = { version = "=0.15.0", path = "../chalk-ir" }

[dev-dependencies]
chalk-integration = { path = "../chalk-integration" }

[features]
default = ["slg-solver", "recursive-solver"]

slg-solver = ["chalk-engine"]
recursive-solver = []
