[package]
name = "chalk-tests"
version = "0.1.0"
license = "Apache-2.0/MIT"
description = "Tests for the Chalk project"
authors = ["Rust Compiler Team", "Chalk developers"]
repository = "https://github.com/rust-lang/chalk"
readme = "README.md"
keywords = ["compiler", "traits", "prolog"]
edition = "2018"

[features]
bench = []

[dev-dependencies]
diff = "0.1.11"
itertools = "0.7.8"

[dev-dependencies.chalk-solve]
version = "0.1.0"
path = ".."

[dev-dependencies.chalk-ir]
version = "0.1.0"
path = "../chalk-ir"

[dev-dependencies.chalk-integration]
version = "0.1.0"
path = "../chalk-integration"
