[package]
name = "chalk"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]

[workspace]

[lib]
doctest = false

[dependencies]
chalk-parse = { path = "../chalk-parse" }
docopt = "0.6"
ena = "0.4"
lalrpop-intern = "0.12.1"
lalrpop-util = "0.12.1"
rustc-serialize = "0.3.21"
lazy_static = "0.2.2"
